implement showFinishRepair() and finishRepair() methods in ManageRepairController